more things done... Stuff doesnt work and yeah

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,15 @@
 {
     "cSpell.words": [
+        "blit",
+        "collidelist",
         "getbuffer",
+        "hitbox",
+        "linesize",
         "MEEE",
         "NRAM",
+        "rects",
+        "RRRRRGGGGG",
+        "shakyness",
         "smarterererr",
         "typee"
     ]
